Link cluster k decision-making across MLs

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "## server mode (switches off data sampling; full distance data too big for a PC)\n",
-    "server_mode = False\n",
+    "set_sample_fraction = 1 / 16\n",
     "\n",
     "## GD settings\n",
     "set_gd = dict()\n",
@@ -224,10 +224,10 @@
     "    \n",
     "## execute code\n",
     "dbf_data = read_tract_dbf('A_Input/tracts_dbf')\n",
-    "if not server_mode:\n",
-    "    i = np.arange(0, dbf_data.shape[0])\n",
-    "    i = ((i % 8) == 1).astype(bool)\n",
-    "    dbf_data = dbf_data.loc[i, ]\n",
+    "set_sample_fraction = int(1 / set_sample_fraction)\n",
+    "i = np.arange(0, dbf_data.shape[0])\n",
+    "i = ((i % set_sample_fraction) == 1).astype(bool)\n",
+    "dbf_data = dbf_data.loc[i, ]\n",
     "log_time('GD1')"
    ]
   },
@@ -299,7 +299,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Cache\n"
+      "Build/Cache Decision: Build\n",
+      "Starting 6 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c6c3ab590ac4e6b9b80a957281272ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?engine/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0d522dbe2a547adaefa0663e4fe80b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "measure_distance_parallel_slice:   0%|          | 0/6982 [00:00<?, ?tasks/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping engine(s): 1650821450\n",
+      "engine set stopped 1650821450: {'engines': {'0': {'exit_code': 0, 'pid': 19552, 'identifier': '0'}, '1': {'exit_code': 0, 'pid': 19553, 'identifier': '1'}, '2': {'exit_code': 0, 'pid': 19554, 'identifier': '2'}, '3': {'exit_code': 0, 'pid': 19555, 'identifier': '3'}, '4': {'exit_code': 0, 'pid': 19556, 'identifier': '4'}, '5': {'exit_code': 0, 'pid': 19557, 'identifier': '5'}}, 'exit_code': 0}\n",
+      "Stopping controller\n",
+      "Controller stopped: {'exit_code': 0, 'pid': 19540, 'identifier': 'ipcontroller-1650821449-waoh-19534'}\n"
      ]
     }
    ],
@@ -559,8 +598,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Cache\n",
-      "Build/Cache Decision: Cache\n"
+      "Build/Cache Decision: Build\n",
+      "Build/Cache Decision: Build\n"
      ]
     }
    ],
@@ -623,20 +662,82 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: DBSCAN elbow is hard coded for temporary dev purposes\n"
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy['too_few'] = min_cluster\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy['too_few'] = xy['clusters'].copy() < xy['too_few']\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy['score'] = xy['score'] + xy['too_few'].copy()\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy['too_few'] = min_cluster\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy['too_few'] = xy['clusters'].copy() < xy['too_few']\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy['score'] = xy['score'] + xy['too_few'].copy()\n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_19534/1475274249.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n"
      ]
     }
    ],
    "source": [
-    "max_min_norm = lambda x: (x - min(x)) / (max(x) - min(x)) \n",
+    "def max_min_norm(x, x_min = 3, x_max = 48):\n",
+    "    x = pd.DataFrame(x)\n",
+    "    n = x.columns[0]\n",
+    "    x['y'] = np.ones((x.shape[0], 1)) * x_max\n",
+    "    x = pd.DataFrame(x.min(axis = 1))\n",
+    "    x['y'] = np.ones((x.shape[0], 1)) * x_min\n",
+    "    x = pd.DataFrame({n:x.max(axis = 1)})\n",
+    "    x[n] = (x[n] - 3) / (48 - 3)\n",
+    "    return x\n",
     "\n",
-    "def elbow_finder(xy, tie_breaker = max):\n",
-    "    ## normalize scores\n",
+    "def elbow_finder(xy, min_cluster = 3, tie_breaker = max):\n",
+    "    \n",
+    "    xy_orig = xy.copy()\n",
+    "\n",
+    "    ## normalize scores; disqualify those that do not meet the cluster minimum\n",
     "    xy_index = xy.index\n",
-    "    xy = xy.apply(max_min_norm).reset_index(drop = True)\n",
+    "    xy['too_few'] = min_cluster\n",
+    "    xy['too_few'] = xy['clusters'].copy() < xy['too_few']\n",
+    "    xy['score'] = xy['score'] + xy['too_few'].copy()\n",
+    "    xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n",
+    "    xy = xy.reset_index(drop = True)\n",
     "    xy = np.array(xy)\n",
     "    \n",
     "    ## calculate reference line\n",
@@ -652,21 +753,28 @@
     "    xy_dist = np.amin(xy_dist, axis = 0)\n",
     "    xy_dist = np.where(xy_dist == max(xy_dist))\n",
     "    \n",
+    "    ## find the record the elbow\n",
+    "    xy_elbow = tie_breaker(xy_index[xy_dist[0]])\n",
+    "    xy_orig['elbow'] = False\n",
+    "    xy_orig.loc[xy_elbow, 'elbow'] = True\n",
+    "    \n",
     "    ## return index of elbow point\n",
-    "    return tie_breaker(xy_index[xy_dist[0]])\n",
+    "    return xy_orig\n",
     "\n",
-    "def retrieve_clusters(idx, ml):\n",
+    "def retrieve_clusters(score, ml):\n",
+    "    idx = score.index[score.elbow.values][0]\n",
     "    x = 'B_Intermediate/Model_' + ml + '_Clust.csv.gz'\n",
     "    x = pd.read_csv(x, usecols = [str(idx)]).squeeze().values\n",
     "    return x\n",
     "\n",
     "## execute code\n",
-    "agglom_elbow = elbow_finder(agglom_score[['clusters', 'score']])\n",
-    "dbscan_elbow = elbow_finder(dbscan_score[['clusters', 'score']])\n",
-    "dbscan_elbow = '90'\n",
-    "agglom_clusters = retrieve_clusters(agglom_elbow, 'Agglom')\n",
-    "dbscan_clusters = retrieve_clusters(dbscan_elbow, 'DBSCAN')\n",
-    "print('WARNING: DBSCAN elbow is hard coded for temporary dev purposes')\n",
+    "agglom_score = elbow_finder(xy = agglom_score[['clusters', 'score']])\n",
+    "agglom_clusters = retrieve_clusters(agglom_score, 'Agglom')\n",
+    "dbscan_score = elbow_finder(\n",
+    "    xy = dbscan_score[['clusters', 'score']],\n",
+    "    min_cluster = agglom_score.loc[agglom_score['elbow'], 'clusters']\n",
+    "    )\n",
+    "dbscan_clusters = retrieve_clusters(dbscan_score, 'DBSCAN')\n",
     "log_time('MD3')"
    ]
   },
@@ -899,7 +1007,18 @@
    "execution_count": 17,
    "id": "85d88ccf-66d9-4aff-b06b-9693ea210435",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "group  0  failed\n",
+      "group  0  failed\n",
+      "group  1  failed\n",
+      "group  1  failed\n"
+     ]
+    }
+   ],
    "source": [
     "def render_region(ax, poly, dbf = dbf_data):\n",
     "    \n",
@@ -951,64 +1070,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8291e682-93f1-46a9-8712-597f5faccaae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 90 \n",
-      "\n",
-      "     name  score  clusters  outliers\n",
-      "30     30  0.004        48      2720\n",
-      "40     40  0.014        39      1586\n",
-      "50     50  0.112        26       821\n",
-      "60     60  0.327        15       547\n",
-      "70     70  0.360        16       330\n",
-      "80     80  0.367        13       224\n",
-      "90     90  0.380        11       160\n",
-      "100   100  0.402         7       117\n",
-      "110   110  0.407         6        82\n",
-      "120   120  0.417         3        52\n",
-      "130   130  0.990         2        44\n",
-      "140   140  0.993         2        31\n",
-      "150   150  0.997         2        15\n",
-      "160   160  0.997         2        13\n",
-      "170   170  1.000         2         1\n",
-      "180   180  1.000         2         1\n",
-      "190   190  1.000         2         1\n",
-      "200   200  1.000         2         1\n",
-      "210   210  1.000         1         0\n",
-      "220   220  1.000         1         0\n",
-      "\n",
-      " 500 \n",
-      "\n",
-      "     name  score  clusters  outliers\n",
-      "400   400  0.025        16         0\n",
-      "425   425  0.025        15         0\n",
-      "450   450  0.026        14         0\n",
-      "475   475  0.031        13         0\n",
-      "500   500  0.033        11         0\n",
-      "525   525  0.045        10         0\n",
-      "550   550  0.049         9         0\n",
-      "575   575  0.059         7         0\n",
-      "600   600  0.059         7         0\n",
-      "625   625  0.059         7         0\n",
-      "650   650  0.059         7         0\n",
-      "675   675  0.059         7         0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('\\n', dbscan_elbow, '\\n')\n",
-    "print(dbscan_score)\n",
-    "\n",
-    "print('\\n', agglom_elbow, '\\n')\n",
-    "print(agglom_score)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1020,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "20191b03-9043-4e5b-85d2-f97aa357a597",
    "metadata": {},
    "outputs": [],
@@ -1033,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
    "outputs": [
@@ -1042,20 +1108,20 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 14:20:01\n",
-      "  GD1: 14:20:04\n",
-      "  GD2: 14:20:07\n",
-      "  RD1: 14:20:27\n",
-      "  RD2: 14:20:27\n",
-      "  RD3: 14:20:27\n",
-      "  MD1: 14:20:27\n",
-      "  MD2: 14:20:27\n",
-      "  MD3: 14:20:27\n",
-      " EMR1: 14:20:27\n",
-      " PVD1: 14:20:29\n",
-      "  RV1: 14:20:29\n",
-      "  RV4: 14:20:30\n",
-      "  End: 14:20:34\n"
+      "   H2: 13:30:43\n",
+      "  GD1: 13:30:46\n",
+      "  GD2: 13:30:49\n",
+      "  RD1: 13:47:57\n",
+      "  RD2: 13:47:57\n",
+      "  RD3: 13:47:57\n",
+      "  MD1: 13:48:21\n",
+      "  MD2: 13:48:55\n",
+      "  MD3: 13:48:55\n",
+      " EMR1: 13:48:55\n",
+      " PVD1: 13:48:56\n",
+      "  RV1: 13:48:56\n",
+      "  RV4: 13:48:57\n",
+      "  End: 13:49:01\n"
      ]
     }
    ],
@@ -1065,11 +1131,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e4e86c6d-ea9d-4689-b1d1-e72f6b3a0724",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     clusters  score  elbow\n",
+      "400        15  0.026  False\n",
+      "425        14  0.027  False\n",
+      "450        14  0.027  False\n",
+      "475        13  0.027  False\n",
+      "500        11  0.032  False\n",
+      "525        10  0.039  False\n",
+      "550         8  0.048  False\n",
+      "575         7  0.052  False\n",
+      "600         7  0.052  False\n",
+      "625         7  0.052  False\n",
+      "650         7  0.052  False\n",
+      "675         7  0.052   True\n",
+      "\n",
+      "\n",
+      "     clusters  score  elbow\n",
+      "30         41  0.004  False\n",
+      "40         36  0.007  False\n",
+      "50         27  0.015  False\n",
+      "60         19  0.113  False\n",
+      "70         12  0.331  False\n",
+      "80         11  0.364  False\n",
+      "90         10  0.379  False\n",
+      "100        10  0.384  False\n",
+      "110         7  0.389  False\n",
+      "120         4  0.412   True\n",
+      "130         5  0.414  False\n",
+      "140         2  0.988  False\n",
+      "150         2   0.99  False\n",
+      "160         2  0.994  False\n",
+      "170         2  0.997  False\n",
+      "180         2  0.998  False\n",
+      "190         2  0.998  False\n",
+      "200         2  0.998  False\n",
+      "210         2    1.0  False\n",
+      "220         2    1.0  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(agglom_score)\n",
+    "print('\\n')\n",
+    "print(dbscan_score)"
+   ]
   },
   {
    "cell_type": "code",
