Adjust progress tracking to weight stages differently

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -134,7 +134,7 @@
     "set_rd = {'1_cache': True}\n",
     "\n",
     "## MD settings\n",
-    "set_md = {'1_cache': True, '2_cache': True, 'db_min_size': 100 / 4}\n",
+    "set_md = {'1_cache': True, '2_cache': True, 'db_min_size': int(100 / 4)}\n",
     "\n",
     "## EMR settings\n",
     "set_emr = dict()\n",
@@ -299,46 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Build\n",
-      "Starting 6 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55f1af50924f4bb4b8d84245cc3e72c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?engine/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2318f63a2674f989089e842598fefb4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "measure_distance_parallel_slice:   0%|          | 0/5585 [00:00<?, ?tasks/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping engine(s): 1650916572\n",
-      "engine set stopped 1650916572: {'engines': {'0': {'exit_code': 0, 'pid': 5370, 'identifier': '0'}, '1': {'exit_code': 0, 'pid': 5371, 'identifier': '1'}, '2': {'exit_code': 0, 'pid': 5372, 'identifier': '2'}, '3': {'exit_code': 0, 'pid': 5373, 'identifier': '3'}, '4': {'exit_code': 0, 'pid': 5374, 'identifier': '4'}, '5': {'exit_code': 0, 'pid': 5375, 'identifier': '5'}}, 'exit_code': 0}\n",
-      "Stopping controller\n",
-      "Controller stopped: {'exit_code': 0, 'pid': 5358, 'identifier': 'ipcontroller-1650916571-wiy0-5352'}\n"
+      "Build/Cache Decision: Cache\n"
      ]
     }
    ],
@@ -610,8 +571,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Build\n",
-      "Build/Cache Decision: Build\n"
+      "Build/Cache Decision: Cache\n",
+      "Build/Cache Decision: Cache\n"
      ]
     }
    ],
@@ -643,8 +604,10 @@
     "## assemble models\n",
     "model_dbscan = dict()\n",
     "for i in range(20, 20 + 20 * 20 + 1, 10):\n",
+    "    #model_iter = OPTICS(max_eps = i, metric = 'precomputed', n_jobs = 8,\n",
+    "    #                    min_samples = set_md['db_min_size'])\n",
     "    model_iter = DBSCAN(eps = i, metric = 'precomputed', n_jobs = 8,\n",
-    "                        min_samples = set_md['db_min_size'])\n",
+    "                    min_samples = set_md['db_min_size'])\n",
     "    model_dbscan[str(int(i))] = model_iter\n",
     "    \n",
     "## execute models\n",
@@ -677,37 +640,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_5352/920359213.py:17: SettingWithCopyWarning: \n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xy.loc[:, 'too_few'] = min_cluster\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_5352/920359213.py:18: SettingWithCopyWarning: \n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xy.loc[:, 'too_few'] = xy['clusters'].copy() < xy['too_few']\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_5352/920359213.py:20: SettingWithCopyWarning: \n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_5352/920359213.py:17: SettingWithCopyWarning: \n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xy.loc[:, 'too_few'] = min_cluster\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_5352/920359213.py:18: SettingWithCopyWarning: \n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xy.loc[:, 'too_few'] = xy['clusters'].copy() < xy['too_few']\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_5352/920359213.py:20: SettingWithCopyWarning: \n",
+      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -772,7 +735,7 @@
     "agglom_clusters = retrieve_clusters(agglom_score, 'Agglom')\n",
     "dbscan_score = elbow_finder(\n",
     "    xy = dbscan_score[['clusters', 'score']],\n",
-    "    min_cluster = agglom_score.loc[agglom_score['elbow'],'clusters'].values[0]*3\n",
+    "    min_cluster = agglom_score.loc[agglom_score['elbow'],'clusters'].values[0]\n",
     "    )\n",
     "dbscan_clusters = retrieve_clusters(dbscan_score, 'DBSCAN')\n",
     "log_time('MD3')"
@@ -1138,20 +1101,20 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 15:56:04\n",
-      "  GD1: 15:56:07\n",
-      "  GD2: 15:56:11\n",
-      "  RD1: 16:07:50\n",
-      "  RD2: 16:07:50\n",
-      "  RD3: 16:07:50\n",
-      "  MD1: 16:08:42\n",
-      "  MD2: 16:09:27\n",
-      "  MD3: 16:09:27\n",
-      " EMR1: 16:09:27\n",
-      " PVD1: 16:09:28\n",
-      "  RV1: 16:09:28\n",
-      "  RV4: 16:09:29\n",
-      "  End: 16:09:33\n"
+      "   H2: 09:02:31\n",
+      "  GD1: 09:02:34\n",
+      "  GD2: 09:02:37\n",
+      "  RD1: 09:02:41\n",
+      "  RD2: 09:02:41\n",
+      "  RD3: 09:02:41\n",
+      "  MD1: 09:02:41\n",
+      "  MD2: 09:02:41\n",
+      "  MD3: 09:02:42\n",
+      " EMR1: 09:02:42\n",
+      " PVD1: 09:02:42\n",
+      "  RV1: 09:02:43\n",
+      "  RV4: 09:02:43\n",
+      "  End: 09:02:47\n"
      ]
     }
    ],
@@ -1214,47 +1177,47 @@
       "\n",
       "\n",
       "     clusters  score  elbow\n",
-      "20         36    0.0  False\n",
-      "30         33  0.003  False\n",
-      "40         35  0.005  False\n",
-      "50         28  0.013   True\n",
-      "60         20  0.096  False\n",
-      "70         14  0.174  False\n",
-      "80         10  0.334  False\n",
-      "90          8  0.361  False\n",
-      "100         7  0.371  False\n",
-      "110         7  0.384  False\n",
-      "120         8  0.387  False\n",
-      "130         6  0.406  False\n",
-      "140         2  0.982  False\n",
-      "150         2  0.987  False\n",
-      "160         2  0.993  False\n",
-      "170         2  0.996  False\n",
-      "180         2  0.998  False\n",
-      "190         2  0.998  False\n",
-      "200         2  0.999  False\n",
-      "210         2    1.0  False\n",
-      "220         2    1.0  False\n",
-      "230         1    1.0  False\n",
-      "240         1    1.0  False\n",
-      "250         1    1.0  False\n",
-      "260         1    1.0  False\n",
-      "270         1    1.0  False\n",
-      "280         1    1.0  False\n",
-      "290         1    1.0  False\n",
-      "300         1    1.0  False\n",
-      "310         1    1.0  False\n",
-      "320         1    1.0  False\n",
-      "330         1    1.0  False\n",
-      "340         1    1.0  False\n",
-      "350         1    1.0  False\n",
-      "360         1    1.0  False\n",
-      "370         1    1.0  False\n",
-      "380         1    1.0  False\n",
-      "390         1    1.0  False\n",
-      "400         1    1.0  False\n",
-      "410         1    1.0  False\n",
-      "420         1    1.0  False\n"
+      "20         38    0.0   True\n",
+      "30         42    0.0  False\n",
+      "40         46    0.0  False\n",
+      "50         49    0.0  False\n",
+      "60         49    0.0  False\n",
+      "70         50    0.0  False\n",
+      "80         50    0.0  False\n",
+      "90         50    0.0  False\n",
+      "100        52    0.0  False\n",
+      "110        52    0.0  False\n",
+      "120        53    0.0  False\n",
+      "130        52    0.0  False\n",
+      "140        52    0.0  False\n",
+      "150        52    0.0  False\n",
+      "160        52    0.0  False\n",
+      "170        52    0.0  False\n",
+      "180        52    0.0  False\n",
+      "190        52    0.0  False\n",
+      "200        52    0.0  False\n",
+      "210        52    0.0  False\n",
+      "220        52    0.0  False\n",
+      "230        52    0.0  False\n",
+      "240        52    0.0  False\n",
+      "250        52    0.0  False\n",
+      "260        52    0.0  False\n",
+      "270        52    0.0  False\n",
+      "280        52    0.0  False\n",
+      "290        52    0.0  False\n",
+      "300        52    0.0  False\n",
+      "310        52    0.0  False\n",
+      "320        52    0.0  False\n",
+      "330        52    0.0  False\n",
+      "340        52    0.0  False\n",
+      "350        52    0.0  False\n",
+      "360        52    0.0  False\n",
+      "370        52    0.0  False\n",
+      "380        52    0.0  False\n",
+      "390        52    0.0  False\n",
+      "400        52    0.0  False\n",
+      "410        52    0.0  False\n",
+      "420        52    0.0  False\n"
      ]
     }
    ],
