Build the foundations of the explanatory text panel and draft the first couple paragraphs.

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -53,7 +53,9 @@
     "from matplotlib.colors  import hsv_to_rgb, to_hex\n",
     "from cartopy.crs        import LambertConformal, PlateCarree\n",
     "from cartopy            import feature\n",
-    "from sklearn.neighbors  import KNeighborsRegressor, KNeighborsClassifier"
+    "from sklearn.neighbors  import KNeighborsRegressor, KNeighborsClassifier\n",
+    "from docx               import Document\n",
+    "from textwrap           import fill as txt_wrap"
    ]
   },
   {
@@ -149,7 +151,8 @@
     "        central_longitude = (-124.73 - 66.95) / 2,\n",
     "        central_latitude = (25.12 + 49.38) / 2,\n",
     "        standard_parallels = (25.12, 49.38)\n",
-    "        )\n",
+    "        ),\n",
+    "    'text_small': 16\n",
     "    }"
    ]
   },
@@ -267,10 +270,36 @@
     "    census = pd.read_csv(\n",
     "        'A_Input/ACSDP5Y2020.DP05_data_with_overlays_2022-04-21T111919.csv.zip',\n",
     "        dtype = census, usecols = census.keys()).set_index('GEO_ID')\n",
+    "    \n",
     "\n",
+    "    \n",
     "## execute code\n",
     "read_secondary_data()\n",
     "log_time('GD2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352ad6a3-9eb1-43a4-8d6d-4999d24d74d2",
+   "metadata": {},
+   "source": [
+    "#### GD3 - Read and format explanatory blurb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3cf75d9c-e2eb-4a90-b76e-f10e9e2ca4eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_explanatory_text(addr = 'A_Input/explanation.docx', n = 47):\n",
+    "    explain = Document(addr).paragraphs\n",
+    "    explain = [txt_wrap(i.text, n) for i in explain]\n",
+    "    explain = '\\n'.join(explain)\n",
+    "    return explain\n",
+    "\n",
+    "explanatory_text = read_explanatory_text()"
    ]
   },
   {
@@ -291,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "11a9c611-546b-4d5c-b717-3f6c54cd656a",
    "metadata": {},
    "outputs": [
@@ -357,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cd121a39-e3dd-4dca-a014-6b67d5a1b2ce",
    "metadata": {},
    "outputs": [],
@@ -397,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a70b3a0f-3b80-4a2f-bbb1-90a86a21df67",
    "metadata": {},
    "outputs": [],
@@ -481,6 +510,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30979516-fa1a-44ca-81a0-edecd354d321",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e97577a5-fa4f-4cf7-8808-6f0e20e27ab6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab2bc34c-768b-456c-9c94-ec44196844c8",
    "metadata": {},
    "source": [
@@ -497,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "06aa2b3b-cc94-447f-91c0-99ba2dfe6f15",
    "metadata": {},
    "outputs": [],
@@ -563,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ddd5cd65-9122-4230-be26-e594d798ab99",
    "metadata": {},
    "outputs": [
@@ -632,53 +675,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "be383a79-a7fd-432b-90f3-bf6b81c166f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  xy.loc[:, 'too_few'] = min_cluster\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:18: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  xy.loc[:, 'too_few'] = xy['clusters'].copy() < xy['too_few']\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:20: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  xy.loc[:, 'too_few'] = min_cluster\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:18: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  xy.loc[:, 'too_few'] = xy['clusters'].copy() < xy['too_few']\n",
-      "/var/folders/xk/rmkl6dh17jl6zqhzl0ky4b_w0000gp/T/ipykernel_1657/767977068.py:20: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def max_min_norm(x, x_min = 3, x_max = 48):\n",
     "    x = pd.DataFrame(x.copy())\n",
@@ -692,12 +692,13 @@
     "\n",
     "def elbow_finder(xy, min_cluster = 3, tie_breaker = max):\n",
     "    \n",
+    "    xy = xy.copy()\n",
     "    xy_orig = xy.copy()\n",
     "\n",
     "    ## normalize scores; disqualify those that do not meet the cluster minimum\n",
     "    xy_index = xy.index\n",
-    "    xy.loc[:, 'too_few'] = min_cluster\n",
-    "    xy.loc[:, 'too_few'] = xy['clusters'].copy() < xy['too_few']\n",
+    "    xy['min_cluster'] = min_cluster\n",
+    "    xy['too_few'] = xy['clusters'] < min_cluster\n",
     "    xy.loc[xy['too_few'], 'score'] = 1\n",
     "    xy.loc[:, 'clusters'] = max_min_norm(xy['clusters'])\n",
     "    xy = xy.reset_index(drop = True)\n",
@@ -767,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "5475b33d-76b7-49a2-b194-533f01c33fbd",
    "metadata": {},
    "outputs": [],
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "67e4066a-99d3-4c41-92e7-6e80adeadae0",
    "metadata": {},
    "outputs": [
@@ -911,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "eae507fa-f5f7-4a9a-8a7b-7fd0bb40bbef",
    "metadata": {},
    "outputs": [
@@ -976,8 +977,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "436aa42a-c927-4810-a511-ee56a79b1d28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def render_explanation(txt = explanatory_text):\n",
+    "    all_axes['explain'].set_ylim(0, 3)\n",
+    "    all_axes['explain'].set_xlim(0, 1)\n",
+    "    all_axes['explain'].text(x = 0.05, y = 2.00, s = txt,\n",
+    "        horizontalalignment = 'left', verticalalignment = 'top',\n",
+    "        fontsize = set_rv['text_small'])\n",
+    "    \n",
+    "render_explanation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad7dbb76-4dab-43fc-9bb9-cace06ebc208",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1008,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "85d88ccf-66d9-4aff-b06b-9693ea210435",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "20191b03-9043-4e5b-85d2-f97aa357a597",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
    "outputs": [
@@ -1101,20 +1119,20 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 09:02:31\n",
-      "  GD1: 09:02:34\n",
-      "  GD2: 09:02:37\n",
-      "  RD1: 09:02:41\n",
-      "  RD2: 09:02:41\n",
-      "  RD3: 09:02:41\n",
-      "  MD1: 09:02:41\n",
-      "  MD2: 09:02:41\n",
-      "  MD3: 09:02:42\n",
-      " EMR1: 09:02:42\n",
-      " PVD1: 09:02:42\n",
-      "  RV1: 09:02:43\n",
-      "  RV4: 09:02:43\n",
-      "  End: 09:02:47\n"
+      "   H2: 16:50:36\n",
+      "  GD1: 16:50:39\n",
+      "  GD2: 16:50:42\n",
+      "  RD1: 16:50:46\n",
+      "  RD2: 16:50:46\n",
+      "  RD3: 16:50:46\n",
+      "  MD1: 16:50:46\n",
+      "  MD2: 16:50:46\n",
+      "  MD3: 16:50:46\n",
+      " EMR1: 16:50:46\n",
+      " PVD1: 16:50:47\n",
+      "  RV1: 16:50:47\n",
+      "  RV4: 16:50:48\n",
+      "  End: 16:50:53\n"
      ]
     }
    ],
@@ -1124,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "e4e86c6d-ea9d-4689-b1d1-e72f6b3a0724",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "9b249d53-d193-4008-9975-a451284ee066",
    "metadata": {},
    "outputs": [],
